# sample-predictive-maintenance-skill

./: .gitignore  Development.md  README.md  SKILL.md  pyproject.toml
infrastructure/: README.md  app.py  batch_inference_stack.py  cdk.json
infrastructure/lambda/: trigger.py
pdm/: README.md  __init__.py  base.py  example_inference.py  training_time.py  uncertainty.py
pdm/anomaly_detection/: __init__.py  algorithms.py  evaluate_anomaly.py  foundation.py  inference_anomaly.py  model.py  spectral_residual.py  synthetic_anomalies.py  temporal.py  train_anomaly.py
pdm/benchmarks/: __init__.py  baselines.json  benchmark.py  download.py  loaders.py
pdm/data/: __init__.py  data_exploration.py  dataset_schema.py  feature_extraction.py  interactions.py  utils.py
pdm/deep_learning/: __init__.py  dataset.py  model.py
pdm/deployment/: __init__.py  batch.py  serve.py
pdm/fault_prediction/: __init__.py  inference.py  model.py  train.py  validate_dataset.py
pdm/monitoring/: __init__.py  baseline.py  drift.py
pdm/remote/: __init__.py  parallel.py  submit.py  train_multilabel.py  train_remote.py
pdm/rul/: __init__.py  model.py  train.py
pdm/survival/: __init__.py  model.py  train.py
pdm/transfer/: __init__.py  adapt.py
references/: artifacts.md  baselines.md  benchmark-datasets.md  data-exploration.md  deployment.md  experimentation.md  raw-aggregation.md  readme-template.md
sagemaker_container/: Dockerfile  README.md  inference.py  requirements.txt  serve.py
scripts/: pyproject.toml  save_model.sh  setup.sh
tests/: conftest.py  test_anomaly_detection.py  test_base.py  test_data_loading.py  test_deployment.py  test_fault_prediction.py  test_monitoring.py  test_rul.py  test_spectral_residual.py  test_survival.py  test_temporal_anomaly.py
tests/data/: anomaly.csv  (+3 more)
