[project]
name = "pdm-project"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "boto3>=1.28",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "autogluon.tabular[lightgbm,catboost,xgboost]>=1.2",
    "matplotlib>=3.7",
    "typing_extensions>=4.0",
    "shap>=0.43",
    "lifelines>=0.29.0",
    "scikit-survival>=0.23.0",
    "joblib>=1.3",
    "imbalanced-learn>=0.12",
    "optuna>=3.0",
]

[tool.setuptools.packages.find]
include = ["pdm*"]
